ai/03-content-guard-presidio.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: content-guard-presidio
  namespace: ai
spec:
  plugin:
    content-guard:
      ClientRequestFormat: messagesAPI
      engine:
        presidio:
          host: "http://presidio-analyzer-svc.presidio.svc.cluster.local:5002"
          language: "en"
          timeout: "30s"
      request:
        rules:
          - entities: ["CREDIT_CARD","EMAIL_ADDRESS"]
            block: true
        OnDenyResponse:
          StatusCode: 206
          Message: '{"Error":"sensitive data detected"}'
          ContentType: "application/json"
      response:
        rules:
          - entities: ["PHONE_NUMBER"]
            block: true
            jsonPaths:
              - ".output[].content[].text"
        OnDenyResponse:
          StatusCode: 206
          Message: '{"Error":"Phone number are prohibited"}'
          ContentType: "application/json"
