ai/03-content-guard-regex.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: content-guard-regex
  namespace: ai
spec:
  plugin:
    content-guard:
      ClientRequestFormat: messagesAPI
      engine:
        regex: {}
      request:
        rules:
            entities: 
              - "(?i)(credit|card)"
            block: true
        OnDenyResponse:
          StatusCode: 206
          Message: '{"Error":"sensitive data detected"}'
          ContentType: "application/json"
      response:
        rules:
          - jsonQueries:
              - ".content[].text"
            entities: 
              - '(?i)(salmon|trout)'
            block: true
        OnDenyResponse:
          StatusCode: 206
          Message: '{"Error":"Fishy"}'
          ContentType: "application/json"
