ai/03-oauth.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth
  namespace: ai
spec:
  plugin:
    oAuthIntrospection:
      tokenSource:
        header: Authorization
        headerAuthScheme: Bearer
      clientConfig:
        url: https://lemur-3.cloud-iam.com/auth/realms/localdemo/protocol/openid-connect/token/introspect
        headers:
          Authorization: urn:k8s:secret:koauth:auth
      tokenTypeHint: access_token
      forwardHeaders:
        username: preferred_username
        groups: groups
      identity: preferred_username
