ai/01-aisvc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bedrock-svc
  namespace: ai
spec:
  type: ExternalName
  externalName: bedrock-mantle.eu-north-1.api.aws
  ports:
  - port: 443
